welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: nbpas is already defined as variable nbpas
var nbpas=0
    ^Methods:11: error: not found: value dejafait
while(nbpas!=dejafait)
             ^Methods:13: error: not found: value dejafait
	dejafait=dejafait+1;
        ^Methods:21: error: Unit does not take parameters
 	GoAndGet()
                ^